# fdk-aac-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coexistence.yml  external-integration.yml  fuzz.yml  performance.yml  release.yml  security.yml
api/: fdk-aac-rust-sys.sha256  mpeghdec-r4.0.0-collisions.txt
benchmarks/: aac-lc-decode-guard.json
crates/fdk-aac/: Cargo.toml  build.rs
crates/fdk-aac-sys/: Cargo.toml  build.rs
crates/fdk-aac-sys/build-support/: qmf-test-wrapper.bridge  test-bridge.patch
crates/fdk-aac-sys/src/: lib.rs
crates/fdk-aac/examples/: benchmark_decode.rs  replay_adts.rs  replay_loas.rs
crates/fdk-aac/src/: aac_encoder.rs  adif.rs  adts.rs  asc.rs  audio_preroll.rs  bits.rs  concealment.rs  decoder.rs  drc.rs  drm.rs  eld_analysis.rs  encoder.rs  encoder_metadata.rs  filterbank.rs  fixed.rs  fixed_fft.rs  hcr.rs  huffman.rs  huffman_tables.rs  ics.rs  inverse.rs  latm.rs  ld_filterbank.rs  ld_sbr.rs  ld_sbr_qmf.rs  lib.rs  limiter.rs  loas.rs  pns.rs  ps.rs  ps_encoder.rs  pulse.rs  raw.rs  rvlc.rs  sac.rs  sbr.rs  sbr_encoder.rs  scalefactor.rs  section.rs  sfb.rs  (+16 more)
crates/fdk-aac/src/testdata/: exhale-1.2.2-5.1-access-units.hex
crates/fdk-aac/tests/: external_application.rs
docs/: ANDROID17_XHE_ENCODER.md  API_COMPATIBILITY.md  DECODER_DRAINING.md  DISTRIBUTION.md  DRC.md  EXTERNAL_INTEGRATION.md  FRAUNHOFER_COEXISTENCE.md  FUZZING.md  GLOBAL_IMPROVEMENT_REQUESTS.md  PERFORMANCE.md  PORT_STATUS.md  PURE_RUST_PARITY_ROADMAP.md  RELEASING.md  SECURITY_AUDIT.md  UPSTREAM.md  UPSTREAM_ISSUES.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: adts.rs  asc.rs  drc.rs  encoder_config.rs  ffi_boundary.rs  loas_latm.rs  raw_access_unit.rs  usac_xhe_aac.rs
tools/: check-performance.sh  check-release-order.sh  check-sys-abi.sh  create-or-verify-release.sh  publish-crates.sh  release-check.sh  replay-issue-85-loas.sh  replay-issue-89-corpus.sh  test-external-ffi-consumer.sh  test-fraunhofer-coexistence.sh  update-upstream.sh  verify-license-files.sh  verify-published-crates.sh  verify-published-release.sh
upstream/: revision
