[package]
name = "fdk-aac-rust-sys"
version.workspace = true
edition.workspace = true
license-file = "../../NOTICE"
readme = "../../README.md"
repository.workspace = true
description = "Reference FFI layer for the third-party Rust port of Fraunhofer FDK AAC"
documentation = "https://docs.rs/fdk-aac-rust-sys"
publish = ["crates-io"]
keywords = ["aac", "audio", "codec", "ffi"]
categories = ["external-ffi-bindings", "multimedia::audio"]
links = "fdk-aac-rust-reference"
build = "build.rs"

[build-dependencies]
cc = "1"
